# Arcade

./: .gitignore  CMakeLists.txt  README.md  arcade  pacmanMap.txt
.github/workflows/: cmake.yml
res/pacman/: pacmanMap.txt
saves/: README.md
saves/pacman/: README.md
saves/snake/: README.md
src/: AGameModule.cpp  AGameModule.hpp  CMakeLists.txt  Core.cpp  Core.hpp  DLLoader.hpp  DisplayNcurse.cpp  DisplayNcurse.hpp  DisplaySdl2.cpp  DisplaySdl2.hpp  DisplaySfml.cpp  DisplaySfml.hpp  GamePacman.cpp  GamePacman.hpp  GameSnake.cpp  GameSnake.hpp  IDisplayModule.hpp  IGameModule.hpp  LibMenu.cpp  LibMenu.hpp  Libs.cpp  Libs.hpp  bar.cpp  bar.hpp  foo.cpp  foo.hpp  foogame.cpp  foogame.hpp  main.cpp
